@@ -495,7 +495,7 @@ g_mime_signer_set_status (GMimeSigner *signer, GMimeSignerStatus status)
  * Returns: the signer status.
  **/
 GMimeSignerStatus
-g_mime_signer_get_status (GMimeSigner *signer)
+g_mime_signer_get_status (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, GMIME_SIGNER_STATUS_NONE);
 	
@@ -528,7 +528,7 @@ g_mime_signer_set_errors (GMimeSigner *signer, GMimeSignerError errors)
  * Returns: the signer errors.
  **/
 GMimeSignerError
-g_mime_signer_get_errors (GMimeSigner *signer)
+g_mime_signer_get_errors (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, GMIME_SIGNER_ERROR_NONE);
 	
@@ -561,7 +561,7 @@ g_mime_signer_set_trust (GMimeSigner *signer, GMimeSignerTrust trust)
  * Returns: the signer trust.
  **/
 GMimeSignerTrust
-g_mime_signer_get_trust (GMimeSigner *signer)
+g_mime_signer_get_trust (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, GMIME_SIGNER_TRUST_NONE);
 	
@@ -595,7 +595,7 @@ g_mime_signer_set_fingerprint (GMimeSigner *signer, const char *fingerprint)
  * Returns: the signer's key fingerprint.
  **/
 const char *
-g_mime_signer_get_fingerprint (GMimeSigner *signer)
+g_mime_signer_get_fingerprint (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, NULL);
 	
@@ -629,7 +629,7 @@ g_mime_signer_set_key_id (GMimeSigner *signer, const char *key_id)
  * Returns: the signer's key id.
  **/
 const char *
-g_mime_signer_get_key_id (GMimeSigner *signer)
+g_mime_signer_get_key_id (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, NULL);
 	
@@ -663,7 +663,7 @@ g_mime_signer_set_name (GMimeSigner *signer, const char *name)
  * Returns: the signer's name.
  **/
 const char *
-g_mime_signer_get_name (GMimeSigner *signer)
+g_mime_signer_get_name (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, NULL);
 	
@@ -696,7 +696,7 @@ g_mime_signer_set_created (GMimeSigner *signer, time_t created)
  * Returns: the creation date of the signer's key.
  **/
 time_t
-g_mime_signer_get_created (GMimeSigner *signer)
+g_mime_signer_get_created (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, (time_t) -1);
 	
@@ -729,7 +729,7 @@ g_mime_signer_set_expires (GMimeSigner *signer, time_t expires)
  * Returns: the expiration date of the signer's key.
  **/
 time_t
-g_mime_signer_get_expires (GMimeSigner *signer)
+g_mime_signer_get_expires (const GMimeSigner *signer)
 {
 	g_return_val_if_fail (signer != NULL, (time_t) -1);
 	
